# lsl_xdf_now

./: .isort.cfg  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  setup.py
flask_app/: app.py  stream_config.yaml
flask_app/static/: sound_ui.html  sound_ui.js  style.css
lsl_xdf_now/data_processing/: buffer.py  filters.py  psd_calculator.py
lsl_xdf_now/generic/: lsl_utils.py  xdf_utils.py
lsl_xdf_now/lsl_readers/: lsl_iterator.py  psd_lsl_reader.py  stream_process.py
